fpgainfo: refactor code for print phy information
Move the common code for printing phy information from board_n6000.c
to board_common.c.

Signed-off-by: Matthew Gerlach <matthew.gerlach@linux.intel.com>

--- a/libraries/libboard/board_common/CMakeLists.txt
+++ b/libraries/libboard/board_common/CMakeLists.txt
@@ -28,5 +28,5 @@ opae_add_static_library(TARGET board_common
     SOURCE
         board_common.c
         ${opae-test_ROOT}/framework/mock/opae_std.c
-    LIBS opae-c
+    LIBS opae-c opaeuio
 )
