libboard: add board plugin for JTAG only PCI Dev Kits
Add a board plugin for PCI Development Kits that only support
FPGA configuration via JTAG.

Signed-off-by: Matthew Gerlach <matthew.gerlach@linux.intel.com>

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -75,4 +75,5 @@ opae_add_subdirectory(libboard/board_d5005)
 opae_add_subdirectory(libboard/board_n6000)
 opae_add_subdirectory(libboard/board_n5010)
 opae_add_subdirectory(libboard/board_c6100)
+opae_add_subdirectory(libboard/board_jtag_pci_dk)
 opae_add_subdirectory(libboard/board_cmc)
