--- a/opae.cfg
+++ b/opae.cfg
@@ -575,6 +575,86 @@
       }
     },
 
+    "0000": {
+      "enabled": true,
+      "platform": "Intel Acceleration JTAG PCI Development Kit",
+
+      "devices": [
+        { "name": "0000_pf", "id": [ "0x8086", "0xbcce", "0x8086", "0x0001" ] },
+        { "name": "0000_vf", "id": [ "0x8086", "0xbccf", "0x8086", "0x0001" ] }
+      ],
+
+      "opae": {
+        "plugin": [
+          {
+            "enabled": true,
+            "module": "libxfpga.so",
+            "devices": [ "0000_pf" ],
+            "configuration": {}
+          },
+          {
+            "enabled": true,
+            "module": "libopae-v.so",
+            "devices": [ "0000_pf", "0000_vf" ],
+            "configuration": {}
+          },
+          {
+            "enabled": true,
+            "module": "libopae-u.so",
+            "devices": [ "0000_pf", "0000_vf" ],
+            "configuration": {}
+          }
+        ],
+        "fpgainfo": [
+          {
+            "enabled": true,
+            "module": "libboard_0001.so",
+            "devices": [
+              { "device": "0000_pf", "feature_id": "*" },
+              { "device": "0000_vf", "feature_id": "*" }
+            ]
+          }
+        ],
+        "fpgad": [
+          {
+            "enabled": true,
+            "module": "libfpgad-vc.so",
+            "devices": [ "0000_pf" ],
+            "configuration": {
+              "cool-down": 30,
+              "get-aer":     [ "setpci -s %s ECAP_AER+0x08.L",
+                               "setpci -s %s ECAP_AER+0x14.L" ],
+              "disable-aer": [ "setpci -s %s ECAP_AER+0x08.L=0xffffffff",
+                               "setpci -s %s ECAP_AER+0x14.L=0xffffffff" ],
+              "set-aer":     [ "setpci -s %s ECAP_AER+0x08.L=0x%08x",
+                               "setpci -s %s ECAP_AER+0x14.L=0x%08x" ],
+              "sensor-overrides": [],
+              "monitor-seu": false
+            }
+          }
+        ],
+        "rsu": [
+          {
+            "enabled": true,
+            "devices": [ "0000_pf" ],
+            "fpga_default_sequences": "common_rsu_sequences"
+          }
+        ],
+        "fpgareg": [
+          {
+            "enabled": true,
+            "devices": [ "0000_pf", "0000_vf" ]
+          }
+        ],
+        "opae.io": [
+          {
+            "enabled": true,
+            "devices": [ "0000_pf", "0000_vf" ]
+          }
+        ]
+      }
+    },
+
     "c6100": {
       "enabled": true,
       "platform": "Intel IPU Platform F2000X-PL",
