qsfpinfo: New tool to print QSFP EEPROM information for cards with qsfp feature (id 0x13).
Signed-off-by: Roger Christensen <rc@silicom.dk>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -982,6 +982,7 @@ set(CPACK_COMPONENTS_ALL
 	toolfpgadiagapps
 	toolpackager
 	tooluserclk
+	toolqsfpinfo
 	toolras
 	toolcoreidle
 	toolmmlink
@@ -1049,6 +1050,7 @@ define_pkg(tools
   define_pkg(tools-extra
   COMPONENTS
   tooluserclk
+  toolqsfpinfo
   toolras
   toolmmlink
   toolcoreidle
