--- a/binaries/CMakeLists.txt
+++ b/binaries/CMakeLists.txt
@@ -31,6 +31,9 @@ opae_add_subdirectory(fpgametrics)
 option(OPAE_BUILD_USERCLK "Enable building extra tool userclk" ON)
 mark_as_advanced(OPAE_BUILD_USERCLK)
 
+option(OPAE_BUILD_QSFPINFO "Enable building extra tool qsfpinfo" ON)
+mark_as_advanced(OPAE_BUILD_QSFPINFO)
+
 option(OPAE_BUILD_FPGADIAG "Enable building extra tool fpgadiag" ON)
 mark_as_advanced(OPAE_BUILD_FPGADIAG)
 
@@ -51,6 +54,9 @@ opae_add_subdirectory(hssi)
 if(OPAE_BUILD_EXTRA_TOOLS)
   if(OPAE_BUILD_USERCLK)
     opae_add_subdirectory(userclk)
+  endif()
+  if(OPAE_BUILD_QSFPINFO)
+    opae_add_subdirectory(qsfpinfo)
   endif()
   if(OPAE_BUILD_FPGADIAG)
     set(OPAE_BUILD_CXXUTILS ON)
