--- a/doc/sphinx/index.rst.in
+++ b/doc/sphinx/index.rst.in
@@ -57,6 +57,7 @@ The main documentation for the site is organized into following sections:
    docs/fpga_tools/mmlink/mmlink
    docs/fpga_tools/packager/packager
    docs/fpga_tools/userclk/userclk
+   docs/fpga_tools/qsfpinfo/qsfpinfo
    docs/fpga_tools/hssi/hssi
    docs/fpga_tools/opaevfio/opaevfio
    docs/fpga_tools/pci_device/pci_device
