qsfpinfo: only include printing qsfp information (include source from ethertool) if OPAE-SDK is compiled with option OPAE_WITH_QSFPINFO_QSFPPRINT
Signed-off-by: Roger Christensen <rc@silicom.dk>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,9 @@ mark_as_advanced(OPAE_MINIMAL_BUILD)
 option(OPAE_BUILD_TESTS "Enable building of OPAE unit tests" OFF)
 mark_as_advanced(OPAE_BUILD_TESTS)
 
+option(OPAE_WITH_QSFPINFO_QSFPPRINT "Enable qsfpinfo print qsfp" OFF)
+mark_as_advanced(OPAE_WITH_QSFPINFO_QSFPPRINT)
+
 ############################################################################
 ## Python Interpreter/Build Env  ###########################################
 ############################################################################
