opae.cfg: fix entries for jtag only PCI card
Fix the opae.cfg entries for the jtag only PCI card, subdevice
id 0x0001.

Signed-off-by: Matthew Gerlach <matthew.gerlach@linux.intel.com>

--- a/opae.cfg
+++ b/opae.cfg
@@ -575,13 +575,13 @@
       }
     },
 
-    "0000": {
+    "0001": {
       "enabled": true,
       "platform": "Intel Acceleration JTAG PCI Development Kit",
 
       "devices": [
-        { "name": "0000_pf", "id": [ "0x8086", "0xbcce", "0x8086", "0x0001" ] },
-        { "name": "0000_vf", "id": [ "0x8086", "0xbccf", "0x8086", "0x0001" ] }
+        { "name": "0001_pf", "id": [ "0x8086", "0xbcce", "0x8086", "0x0001" ] },
+        { "name": "0001_vf", "id": [ "0x8086", "0xbccf", "0x8086", "0x0001" ] }
       ],
 
       "opae": {
@@ -589,29 +589,29 @@
           {
             "enabled": true,
             "module": "libxfpga.so",
-            "devices": [ "0000_pf" ],
+            "devices": [ "0001_pf" ],
             "configuration": {}
           },
           {
             "enabled": true,
             "module": "libopae-v.so",
-            "devices": [ "0000_pf", "0000_vf" ],
+            "devices": [ "0001_pf", "0001_vf" ],
             "configuration": {}
           },
           {
             "enabled": true,
             "module": "libopae-u.so",
-            "devices": [ "0000_pf", "0000_vf" ],
+            "devices": [ "0001_pf", "0001_vf" ],
             "configuration": {}
           }
         ],
         "fpgainfo": [
           {
             "enabled": true,
-            "module": "libboard_0001.so",
+            "module": "libboard_jtag_pci_dk.so",
             "devices": [
-              { "device": "0000_pf", "feature_id": "*" },
-              { "device": "0000_vf", "feature_id": "*" }
+              { "device": "0001_pf", "feature_id": "*" },
+              { "device": "0001_vf", "feature_id": "*" }
             ]
           }
         ],
@@ -619,7 +619,7 @@
           {
             "enabled": true,
             "module": "libfpgad-vc.so",
-            "devices": [ "0000_pf" ],
+            "devices": [ "0001_pf" ],
             "configuration": {
               "cool-down": 30,
               "get-aer":     [ "setpci -s %s ECAP_AER+0x08.L",
@@ -635,21 +635,21 @@
         ],
         "rsu": [
           {
-            "enabled": true,
-            "devices": [ "0000_pf" ],
+            "enabled": false,
+            "devices": [ "0001_pf" ],
             "fpga_default_sequences": "common_rsu_sequences"
           }
         ],
         "fpgareg": [
           {
             "enabled": true,
-            "devices": [ "0000_pf", "0000_vf" ]
+            "devices": [ "0001_pf", "0001_vf" ]
           }
         ],
         "opae.io": [
           {
             "enabled": true,
-            "devices": [ "0000_pf", "0000_vf" ]
+            "devices": [ "0001_pf", "0001_vf" ]
           }
         ]
       }
@@ -946,6 +946,7 @@
     "n6000",
     "n6001",
     "c6100",
+    "0001",
     "ofs",
     "f5",
     "cmc"
