--- a/.github/workflows/build-rpms.yml
+++ b/.github/workflows/build-rpms.yml
@@ -4,8 +4,15 @@ on:
   push:
     branches:
       - master
+      - 'release/*'
+    tags:
+      - '*'
   pull_request:
-    branches: [master]
+    branches:
+      - master
+      - 'release/*'
+    tags:
+      - '*'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
