.github: workflows: restrict top-level workflow permissions
Only permit reading the repository contents by default, and set further
privileges at the job level to satisfy OpenSSF Scorecard criteria.

Link: https://github.com/ossf/scorecard/blob/9ff40de429d0c7710076070387c8755494a9f187/docs/checks.md#token-permissions
Link: https://securityscorecards.dev/viewer/?uri=github.com/OFS/opae-sdk
Signed-off-by: Peter Colberg <peter.colberg@intel.com>

--- a/.github/workflows/docker-rpm.yml
+++ b/.github/workflows/docker-rpm.yml
@@ -1,5 +1,9 @@
 name: Docker Build and Review RPM
 
+# https://github.com/ossf/scorecard/blob/9ff40de429d0c7710076070387c8755494a9f187/docs/checks.md#token-permissions
+permissions:
+  contents: read
+
 on:
   push:
     branches-ignore:
