--- a/.github/workflows/no-ccpp-tests.yml
+++ b/.github/workflows/no-ccpp-tests.yml
@@ -1,5 +1,9 @@
 name: C/C++ CI Build and Test (dummy)
 
+# https://github.com/ossf/scorecard/blob/9ff40de429d0c7710076070387c8755494a9f187/docs/checks.md#token-permissions
+permissions:
+  contents: read
+
 on:
   workflow_dispatch:
   push:
