ci: add Rocky Linux 9.4
Signed-off-by: Peter Colberg <peter.colberg@intel.com>

--- a/.github/workflows/build-rpms.yml
+++ b/.github/workflows/build-rpms.yml
@@ -24,7 +24,7 @@ jobs:
   RPM:
     strategy:
       matrix:
-        distro: [fedora39, fedora40, rockylinux8]
+        distro: [fedora39, fedora40, rockylinux8, rockylinux9]
     runs-on: ubuntu-latest
     name: Build ${{ matrix.distro }}
     steps:
