.github/workflows: avoid conflicting artifact name in job matrix
Reuse of the same artifact name is unsupported in upload-artifact@v4.

Signed-off-by: Peter Colberg <peter.colberg@altera.com>

--- a/.github/workflows/python-static-analysis.yml
+++ b/.github/workflows/python-static-analysis.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Archive results
       uses: actions/upload-artifact@v4
       with:
-        name: static-analysis
+        name: python-static-analysis-${{ matrix.python-version }}
         path: |
           ${{ github.workspace }}/pylint.log
           ${{ github.workspace }}/flake8.log
