.github/workflows: set runner OS to Ubuntu 22.04
The GitHub hosted runners now default to Ubuntu 24.04, which results
in multiple, smaller failures in the C/C++ build and test workflow.

Signed-off-by: Peter Colberg <peter.colberg@altera.com>

--- a/.github/workflows/build-rpms.yml
+++ b/.github/workflows/build-rpms.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         distro: [fedora39, fedora40, rockylinux8, rockylinux9]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: Build ${{ matrix.distro }}
     steps:
       - uses: actions/checkout@v4
