--- a/.github/workflows/ccpp-tests.yml
+++ b/.github/workflows/ccpp-tests.yml
@@ -41,7 +41,7 @@ on:
 
 jobs:
   coding-style:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         lang-type: [c, cpp]
@@ -64,7 +64,7 @@ jobs:
     - name: test ${{ matrix.lang-type }}
       run: ${{ github.workspace }}/scripts/test-codingstyle-all.sh ${{ matrix.lang-type }}
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         build-type: [Debug, Release, RelWithDebInfo]
@@ -91,7 +91,7 @@ jobs:
     - name: make ${{ matrix.build-type }}
       run: cd ${{ github.workspace }}/.build && make -j $(nproc)
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
     - name: bugfix
@@ -118,7 +118,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: unittests/coverage.info.cleaned
   build-doc:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
     - name: update
