--- a/.github/workflows/build-debs.yml
+++ b/.github/workflows/build-debs.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         distro: [ubuntu22]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: Build ${{ matrix.distro }}
     steps:
       - uses: actions/checkout@v4
