--- a/.github/workflows/docker-rpm.yml
+++ b/.github/workflows/docker-rpm.yml
@@ -14,7 +14,7 @@ on:
       - .github/workflows/docker-rpm.yml
 jobs:
   build_docker_image:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - name: Build a Docker image and RPM file
