--- a/.github/workflows/no-python-analysis.yml
+++ b/.github/workflows/no-python-analysis.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   analyze:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
