--- a/.github/workflows/pacsign.yml
+++ b/.github/workflows/pacsign.yml
@@ -11,7 +11,7 @@ on:
       - '.github/workflows/pacsign.yml'
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
