ci: add Ubuntu 24.04
Signed-off-by: Peter Colberg <peter.colberg@altera.com>

--- a/.github/workflows/build-debs.yml
+++ b/.github/workflows/build-debs.yml
@@ -24,7 +24,7 @@ jobs:
   DEB:
     strategy:
       matrix:
-        distro: [ubuntu22]
+        distro: [ubuntu22, ubuntu24]
     runs-on: ubuntu-22.04
     name: Build ${{ matrix.distro }}
     steps:
