packaging: update rpm spec file to match Fedora package
As a prerequisite for building on Fedora 41, omit manual `pip install`
in favour of letting the build automatically install Python modules.
In docker containers, add new build dependency on python3-wheel.

Remove manual package dependencies in favour of letting the package
build automatically determine the correct package dependencies.

Link: https://src.fedoraproject.org/rpms/opae/blob/rawhide/f/opae.spec
Signed-off-by: Peter Colberg <peter.colberg@altera.com>

--- a/docker/fedora40/Dockerfile
+++ b/docker/fedora40/Dockerfile
@@ -1,7 +1,5 @@
 FROM fedora:40
-RUN dnf install -y python3 python3-pip python3-devel python3-jsonschema python3-pyyaml python3-pybind11 git make cmake libuuid-devel json-c-devel gcc clang gcc-c++ libuuid-devel json-c-devel hwloc-devel tbb-devel libedit-devel rpm-build rpmdevtools pybind11-devel python3-virtualenv yaml-cpp-devel libudev-devel cli11-devel spdlog-devel systemd numactl-devel
-RUN python3 -m pip install setuptools --upgrade --prefix=/usr
-RUN python3 -m pip install pyyaml jsonschema
+RUN dnf install -y python3 python3-pip python3-devel python3-jsonschema python3-pyyaml python3-pybind11 python3-setuptools python3-wheel git make cmake libuuid-devel json-c-devel gcc clang gcc-c++ libuuid-devel json-c-devel hwloc-devel tbb-devel libedit-devel rpm-build rpmdevtools pybind11-devel python3-virtualenv yaml-cpp-devel libudev-devel cli11-devel spdlog-devel systemd numactl-devel
 WORKDIR /root
 COPY scripts/build-rpms-new.sh /scripts/build-rpms-new.sh
 COPY scripts/test-rpms.sh /scripts/test-rpms.sh
