--- a/docker/rockylinux8/Dockerfile
+++ b/docker/rockylinux8/Dockerfile
@@ -4,7 +4,7 @@ RUN dnf config-manager --set-enabled powertools
 RUN dnf install -y epel-release
 RUN dnf check-update || true
 RUN dnf upgrade -y
-RUN dnf install -y python3 python3-pip python3-devel python3-jsonschema python3-pyyaml gdb vim git gcc gcc-c++ make cmake libuuid-devel json-c-devel hwloc-devel tbb-devel cli11-devel spdlog-devel libedit-devel systemd-devel doxygen python3-sphinx pandoc rpm-build rpmdevtools python3-virtualenv yaml-cpp-devel libudev-devel libcap-devel sudo numactl-devel
+RUN dnf install -y python3 python3-pip python3-devel python3-jsonschema python3-pyyaml python3-setuptools python3-wheel gdb vim git gcc gcc-c++ make cmake libuuid-devel json-c-devel hwloc-devel tbb-devel cli11-devel spdlog-devel libedit-devel systemd-devel doxygen python3-sphinx pandoc rpm-build rpmdevtools python3-virtualenv yaml-cpp-devel libudev-devel libcap-devel sudo numactl-devel
 
 RUN python3 -m pip install --user jsonschema virtualenv pudb pyyaml pybind11 && \
     # setuptools < ~51.x will fail to process the pyproject.toml successfully, so we upgrade
