userclk: separate device independent from Agilex 7 configuration
The user clock frequency configuration protocol varies across devices.
Move the Agilex 7 and Stratix 10 configuration sequences out of
fpga_user_clk.c and into a new protocol-specific file.

Signed-off-by: Michael Adler <michael.adler@altera.com>

--- a/tests/xfpga/CMakeLists.txt
+++ b/tests/xfpga/CMakeLists.txt
@@ -50,6 +50,7 @@ opae_test_add_static_lib(TARGET xfpga-static
 	${OPAE_LIB_SOURCE}/plugins/xfpga/version.c
 	${OPAE_LIB_SOURCE}/plugins/xfpga/wsid_list.c
 	${OPAE_LIB_SOURCE}/plugins/xfpga/usrclk/fpga_user_clk.c
+	${OPAE_LIB_SOURCE}/plugins/xfpga/usrclk/fpga_user_clk_type1.c
 	${OPAE_LIB_SOURCE}/plugins/xfpga/metrics/metrics_max10.c
 	${OPAE_LIB_SOURCE}/plugins/xfpga/metrics/metrics_utils.c
 	${OPAE_LIB_SOURCE}/plugins/xfpga/metrics/afu_metrics.c
